
Nov-12-2006  Yen-Ju Chen
	* Process namespace for XMLParser.
          It is essential for atom 1.0.
	* Avoid add nil RSSLink into array.

Nov-11-2006  Guenther Noack
	* Fixed namespace bug (namespaces were accidentally ignored before)
	* Improved date parsing

Nov-11-2006  Yen-Ju Chen
        * Try to fix random failed fetching issue by more safe guard.

Nov-10-2006  Yen-Ju Chen
	* Try to improve memory usage by properly retain and release.

Nov-09-2006  Guenther Noack
	* Removed some deprecated methods from RSSFeed class
	* Added -articleSet and -articleCount method to RSSFeed
	  protocol and class
	* Added support for some more itunes-Namespace (=Podcast)
	  features. (Why doesn't the namespace work any more?)

Nov-08-2006  Guenther Noack
	* Fixed enclosure-link bug

Nov-06-2006  Yen-Ju Chen
	* Compile on Cocoa.
	* Post notification if fatching failed.

Nov-05-2006  Guenther Noack
	* Removed some deprecated methods
	* Dropped NSCoding serialization methods (not used by anyone
	  at the moment and they were broken anyway since the intro-
	  duction of the RSSLink class). Please use the methods in
	  the Storage categories instead. 
	* Added Factory class

Nov-04-2006  Guenther Noack
	* Removed lock from RSSFeed class. (The lock is left from
	  a first try with multithreading and never really did what
	  it was supposed to do.)
	* Put RSSFeed and RSSArticle protocols in seperate files.
 
Nov-03-2006  Yen-Ju Chen
	* Compile on Cocoa.

Nov-03-2006  Guenther Noack
	* Protocols (interfaces) for RSSFeed and RSSArticle
	* Fixed RSSFeed storage, so that restored articles have the
	  correct parent feed.
	* Deprecated -status method in feed in favor of -isFetching,
	  which is much more suitable for a boolean return value. (There
	  was only RSSFeedIsFetching and RSSFeedIsIdle.)

Nov-02-2006  Guenther Noack
	* Added code for RSSFeed storage

Nov-01-2006  Guenther Noack
	* Fixed creation of articles without proper 'alternate' link.

Nov-01-2006  Yen-Ju Chen